Footer spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -466,7 +466,7 @@ footer .social {
       letter-spacing: 1px;
     }
     footer p {
-      width: 100%;
+      width: 90%;
       font-size: 16px;
       line-height: 24px;
       text-rendering: optimizeLegibility;
@@ -506,7 +506,7 @@ footer .social {
       letter-spacing: 2px;
     }
     footer p {
-      width: 40%;
+      width: 60%;
       max-width: 720px;
       font-size: 24px;
       line-height: 32px;
